# ad-spot

./: CHANGELOG.md  Cargo.toml  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
app-mute/: Cargo.toml  main.rs
app-mute/src/: ghc.rs  lib.rs
backend/: Cargo.toml  tauri.conf.json
backend/src/: commands.rs  error.rs  lib.rs  main.rs  settings.rs
frontend/: app.tsx  index.html  main.js  main.tsx  styles.css
frontend/types/: index.ts
frontend/utils/: commands.ts
