[package]
name = "app-mute"
version = "0.2.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_WindowsAndMessaging",
] }
windows-strings = "0.5.1"
